Kubernetes/CarsWebAPI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cars-web-api-deployment
  namespace: application
spec:
  replicas: 1
  selector:
     matchLabels:
       app: cars-web-api
  template:
    metadata:
      labels:
        app: cars-web-api
    spec:
      containers:
      - name: cars-web-api
        image: sebtec1212/carswebapi:0.1-postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
