Kubernetes/CarsWebAPI/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cars-web-api-ingress
  namespace: application
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: cars-web-api-service
                port:
                  number: 80
            path: /cars
